# MINI_Upgrade_Kit

./: CMakeLists.txt  README.md
Example_code/: Kinematics.c  Makefile  Squat_Example  Walk_inplace  bmpCapture  bmpCapture.c  dxl_driver.c  makeit.sh  mini_walk_inplace.c  squat.c
Example_code/BNO055_testcode/: BNO055_Read  BNO055_test_prompt  getbno.c  getbno055.c  makeit.sh
Example_code/include/: Kinematics.h  dxl_driver.h
MATLAB Simulation/MINI_Simscape_Original_IK/: DARWIN-MINI_LB-040.STEP  Darwin-mini_cvr_sole.STEP  Darwin-mini_frm_ext_01.STEP  Darwin-mini_frm_ext_02.STEP  MINI_DataFile.m  MINI_Simscape.xml  MINI_Simscape_IK.slx  RZ.m  SP0-5.STEP  SPD_3b3.STEP  SPD_3b5.STEP  SPD_3b7.STEP  SPD_4b5.STEP  SPL-2b2.STEP  SPU-5.STEP
MATLAB Simulation/MINI_Simscape_Upgraded_IK/: BatteryConnector_Default_sldprt.STEP  CUI_DEVICES_PJ-102B_Default_sldprt.STEP  Camera_Default_sldprt.STEP  DHparameter.m  Darwin-mini_cvr_foot_Default_sldprt.STEP  Darwin-mini_cvr_sole_Default_sldprt.STEP  IK_RF.m  MINI_Upgrade.xml  MINI_upgrade_DataFile.m  River_01_Default_sldprt.STEP  SP0-5_Default_sldprt.STEP  TXYZ.m  Upgrade_Body_cover_v2_Default_sldprt.STEP  XL-320_v2_Default_sldprt.STEP  bno055_Default_sldprt.STEP  u2d2_Default_sldprt.STEP
MINI_ROS_package/: CMakeLists.txt  package.xml
MINI_ROS_package/config/: missionPlan.yaml
MINI_ROS_package/launch/: mini.launch
MINI_ROS_package/src/: ball_chasing.cpp  perception.py
Simulation/MINI_Simscape_Original_IK/: DARWIN-MINI_LBB-040.STEP  Darwin-mini_cvr_calf.STEP  Darwin-mini_cvr_foot.STEP  Darwin-mini_cvr_head_solid.STEP  Darwin-mini_frm_body.STEP  Darwin-mini_plate_cnvt_3x5.STEP  RX.m  ReadMe.txt  XL-320.STEP  XL-320_Dummy.STEP
Simulation/MINI_Simscape_Upgraded_IK/: 3pin Molex_Default_sldprt.STEP  Camera_Frame_Default_sldprt.STEP  DARWIN-MINI_LB-040.stp_Default_sldprt.STEP  DARWIN-MINI_LBB-040.stp_Default_sldprt.STEP  Darwin-mini_cvr_calf_Default_sldprt.STEP  Darwin-mini_frm_body_v2_Default_sldprt.STEP  Darwin-mini_frm_ext_01_Default_sldprt.STEP  Darwin-mini_frm_ext_02_Default_sldprt.STEP  Darwin-mini_plate_cnvt_3x5_Default_sldprt.STEP  IK_LF.m  MINI_upgrade.slx  PowerBoardBase_Default_sldprt.STEP  RY.m  River_02_Default_sldprt.STEP  SPD_3b3_sldprt.STEP  SPD_3b5_sldprt.STEP  SPD_3b7_sldprt.STEP  SPD_4b5_sldprt.STEP  SPL-2b2_Default_sldprt.STEP  SPU-5_Default_sldprt.STEP  SPU-5_v2_Default_sldprt.STEP  SetupMINI.m  VoltageRegulator_Default_sldprt.STEP  XL-320_Default_sldprt.STEP  m2.5x6_91290A101_sldprt.STEP  m2x6_91290A013_sldprt.STEP  orangePiLite_2_Default_sldprt.STEP  parameters.m  sheild_Default_sldprt.STEP
URDF/MINI_CAD/: CMakeLists.txt  package.xml
URDF/MINI_CAD/config/: joint_names_MINI_CAD.yaml
URDF/MINI_CAD/launch/: display.launch  gazebo.launch
URDF/MINI_CAD/meshes/: L_arm_01.STL  L_arm_02.STL  L_arm_03.STL  L_leg_01.STL  L_leg_03.STL  L_leg_04.STL  L_leg_05.STL  R_Leg_02.STL  R_arm_01.STL  R_arm_02.STL  R_arm_03.STL  R_leg_01.STL  (+3 more)
config/: walkingParam.yaml
include/: Foot_planning.h  gaitplanning.h  mod.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
launch/: walking.launch
mini_ros_hardware/: CMakeLists.txt  package.xml
mini_ros_hardware/include/: kinematics.h
mini_ros_hardware/src/: foot_position_input.cpp  inplace_walking.cpp  kinematics.cpp
mini_ros_simulation/robotis_mini_control/: CMakeLists.txt  package.xml
mini_ros_simulation/robotis_mini_control/cfg/cpp/robotis_mini_control/: RobotisMiniConfig.h
mini_ros_simulation/robotis_mini_control/config/: RobotisMini.cfg  robotis_mini_control.yaml
mini_ros_simulation/robotis_mini_control/launch/: control.launch  rviz.launch  sensors_gazebo2ros.launch
mini_ros_simulation/robotis_mini_control/src/: assignment_2.py  com.py  foot_position.py  ft_contact.py  odom.py  robotis_mini.py
mini_ros_simulation/robotis_mini_description/: CMakeLists.txt
mini_ros_simulation/robotis_mini_gazebo/: package.xml
src/: COM_calc.cpp  Foot_planning.cpp  Gait_planning.cpp  ZMP_walking.cpp  inplace_walking.cpp  mod.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
(+37 files in other folders)
